--- a/home.html
+++ b/home.html
@@ -49,17 +49,16 @@ title: Home
         </select>
         <label class="mdl-textfield__label" for="unit">Unit</label>
       </div>
-    </form><br>
+    </form>
+    <br>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="custom">
        <label class="mdl-textfield__label" for="custom"><span class="custom">Custom </span> Multiplier</label>
        <span class="mdl-textfield__error">Input is not a number!</span>
     </div><br>
-    Data: <input type="text" class="data" value="8"/>
-    -bit<br/>
-    Address: <input type="text" class="address" value="4"/>
-    -bit<br/>
-    Storage: <input type="text" class="storage" value=""/>
+    Data: <input type="text" class="data" value="8">-bit<br>
+    Address: <input type="text" class="address" value="4">-bit<br>
+    Storage: <input type="text" class="storage" value="">
     <select class="unit">
         <optgroup label="Binary">
             <option value="2 0">bits</option>
